--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assents/style/login.css" >
+    <link rel="stylesheet" href="./assents/style/paginaPricipal.css" >
     <script src="./assents/script/armazenamento.js" defer></script>
     <title>Quiz</title>
 </head>
 <body>
-    <div class="form">
+    <div id="form">
         <label>Me informe seu nome:</label>
         <input type="text" id="nome" placeholder="Nome ou nick">
         <button id="btn_login" onclick="enviar()">Entrar</button>
+    </div>
+    <div id="opcao_quiz">
+        <div id="quiz01">
+            <img src="#" alt="Anime">
+            <h1>Veja seu conhecimento sobre Dragon ball</h1>
+            <button id="Quiz_dragonball">Começar Quiz</button>
+        </div>
     </div>
 </body>
 </html>
