--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <title>Quiz</title>
 </head>
 <body>
-    <div id="form">
-        <label>Me informe seu nome:</label>
-        <input type="text" id="nome" placeholder="Nome ou nick">
-        <button id="btn_login" onclick="enviar()">Entrar</button>
+    <div id="login">
+        <label class="item_form">Me informe seu nome:</label>
+        <input type="text" class="item_form" id="nome" placeholder="Nome ou nick">
+        <button class="item_form" id="btn_login" onclick="enviar()">Entrar</button>
     </div>
     <div id="opcao_quiz">
         <div id="quiz01">
-            <img src="#" alt="Anime">
-            <h1>Veja seu conhecimento sobre Dragon ball</h1>
-            <button id="Quiz_dragonball">Começar Quiz</button>
+            <img src="#" alt="Anime" class="img_quiz">
+            <h1 class="titulo_quiz">Veja seu conhecimento sobre Dragon ball</h1>
+            <button id="Quiz_dragonball" class="btn_quiz">Começar Quiz</button>
         </div>
     </div>
 </body>
