atualização em quesito de programação

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./assents/style/paginaPricipal.css">
     <script src="./assents/script/QuizDragonBallz.js" defer></script>
     <script src="./assents/script/QuizProgramacaoem.js" defer></script>
-    <!-- <script src="./assents/script/QuizMiranha.js" defer></script> -->
+    <script src="./assents/script/QuizMiranha.js" defer></script>
+    <script src="./assents/script/btn.js" defer></script>
     <title>Quiz</title>
 </head>
 
@@ -19,7 +20,7 @@
             <img src="./assents/svg/letter-q-svgrepo-com.svg" alt="Logo" id="logo">
             <h2 id="logo_name">Quiz</h2>
         </div>
-        <button>Ir vê resultado</button>
+        <button onclick="ir_paginaRanking()">Ir vê resultado</button>
     </div>
     <div id="body_quizes">
         <!-- quiz dragon ball -->
